--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
   <head>
-    <title>Venilton FalvoJr</title>
+    <title>Melquisedeque Marins Junior</title>
     
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,13 +33,13 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>Venilton FalvoJr</h2>
+              <h2>Melquisedeque Marins Junior</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Líder Técnico na DIO</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Araraquara-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>falvojr@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(16) 99721-8281</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Java/Spring boot developer</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Porto, Portugal</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>melck_junior@hotmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(+351) 935 893 129</p>
               <hr>
   
               <p class="w3-large">
@@ -47,19 +47,35 @@
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
-              </div>
-              <p>Android</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
-              </div>
-              <p>Koltin</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%"></div>
               </div>
               <p>Spring Framework</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
+              </div>
+              <p>Javascript</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              </div>
+              <p>Typescript</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              </div>
+              <p>HTML5</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
+              </div>
+              <p>CSS3</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
+              </div>
+              <p>React</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
+              </div>
+              <p>Angular</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
               </div>
               <br>
   
@@ -72,11 +88,7 @@
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:60%"></div>
-              </div>
-              <p>Espanhol</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:50%"></div>
               </div>
               <br>
             </div>
