--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
 
   <body class="w3-light-grey" cz-shortcut-listen="true">
   
-    <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
   
-      <!-- The Grid -->
       <div class="w3-row-padding">
   
-        <!-- Left Column -->
         <div class="w3-third">
   
           <div class="w3-white w3-text-grey w3-card-4">
-            <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
               <h2>Melquisedeque Marins Junior</h2>
             </div>
@@ -102,7 +98,14 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Doutorando na Universidade de São Paulo (USP), onde contribui junto ao Instituto de Ciências Matemáticas e de Computação (ICMC), campus de São Carlos. Possui 12 anos de experiência na área de desenvolvimento de software, com ênfase na análise, construção e arquitetura de sistemas Web e Mobile. Além disso, é certificado nas plataformas .NET (Microsoft), Java (Oracle) e Android (Google). Atualmente é Líder Técnico no time de Educação da DIO, onde é responsável por orquestrar os conteúdos educacionais da plataforma.</p>
+            <p> Sou um profissional muito dedicado, com larga experiência na área de engenharia elétrica.
+              Estou numa fase de transição de carreira para a área de TI, na qual tenho me dedicado a estudar e aprofundar
+              conhecimentos relativos a desenvolvimento de softwares e aplicações web utilizando linguagens de
+              programação amplamente validadas pelo mercado como Java e Javascript.
+              Sou muito focado e tenho facilidade em aprender rápido, organizado, criativo, gosto de trabalhar em equipe e gerenciar times. 
+              Estou em busca de uma oportunidade de atuar na área de TI em que possa contribuir com a empresa e tenha
+              possibilidade de construir uma carreira sólida. 
+              Minha mudança do Brasil para Portugal é uma busca por qualidade de vida e acredito que atuar em uma empresa criativa e inovadora faça parte dessa jornada.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -110,9 +113,17 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Planejar o roadmap dos conteúdos educacionais da plataforma, tendo em vista as principais tendências de mercado e necessidades das empresas parceiras. Além de garantir que as experiências de aprendizagem tenham total sinergia com a nossa metodologia educacional.</p>
+              <h5 class="w3-opacity"><b>WPP Elétric e Lógica Ltda</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>outubro 2011 - <span class="w3-tag w3-indigo w3-round">Outubro 2021</span></h6>
+              <p>Cargo na área técnica/estrategica com as seguintes atribuições:
+                Supervisão de projetos e execuções na área de elétrica e lógica a nível industrial e residencial.
+                Elaboração de orçamentos e cadernos técnicos.
+                Gerenciamento do plano estratégico da empresa na área técnica.
+                Captação de clientes de porte superior.
+                Gerenciamento da carteira de principais clientes da empresa para diagnóstico da demanda e definição de estratégias de soluções.
+                .
+                Como destaque, gerenciamento de equipe de mais de 100 colaboradores durante a execução de obra de
+                implantação das instalações das salas elétricas da Usina Termoelétrica de Itaqui, de propriedade (atualmente) da ENEVA, localizada nas imediações do Porto do Itaqui - Brasil, no período de novembro de 2011 a julho de 2013.Cargo na área técnica/estrategica com as seg</p>
             </div>
           </div>
   
@@ -122,24 +133,34 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Junho 2022 - <span class="w3-tag w3-indigo w3-round">Agosto 2022</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Programação Reativa com Spring WebFlux (36h)</a></li>
-                <li><a href="https://www.dio.me/certificate/07041B99" target="_blank">Curso: Desenvolvimento Mobile Nativo Para Android (1h)</a></li>
-                <li><a href="https://www.dio.me/certificate/F12AC30B" target="_blank">Curso: Componentes, Layouts e UI/UX Em Apps Android (3h)</a></li>
-                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Java e Kotlin Juntos!? Construindo Apps Android (3h)</a></li>
+                <li><a href="https://www.dio.me/certificate/7995F73A" target="_blank">Curso: Java developer (120h)</a></li>
+                <li><a href="https://www.dio.me/certificate/6AB30585" target="_blank">GFT Start #4 Java (56h)</a></li>
+                <li><a href="https://www.dio.me/certificate/C44CF2A4" target="_blank">Curso: Spring Framework Experience(50h)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h5 class="w3-opacity"><b>Dev Superior</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2022 - <span class="w3-tag w3-indigo w3-round">Agosto 2022</span></h6>
+              <p>
+                Plataforma de ensino online direcionada a desenvolvedores iniciantes ou que desejam expandir dua área de atuação.
+              </p>
+              <ul>
+                certificados/6839728" target="_blank">Curso: Bootcamp Spring edição 3.0 (160h)</a></li>
+                <li><a href="https://www.dio.me/certificate/C44CF2A4" target="_blank">Curso: Spring Framework Experience(50h)</a></li>
+              </ul>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Instituto Federal de Ciencia e Tecnologia do Maranhão IFMA</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2007 - dezembro 2008</h6>
+              <p>Técnico em eletromecânica.</p>
             </div>
           </div>
 
