--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <h5 class="w3-opacity"><b>Dev Superior</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2022 - <span class="w3-tag w3-indigo w3-round">Agosto 2022</span></h6>
               <p>
-                Plataforma de ensino online direcionada a desenvolvedores iniciantes ou que desejam expandir dua área de atuação.
+                Plataforma de ensino online direcionada a desenvolvedores iniciantes ou que desejam expandir sua área de atuação.
               </p>
               <ul>
                 certificados/6839728" target="_blank">Curso: Bootcamp Spring edição 3.0 (160h)</a></li>
@@ -169,11 +169,22 @@
               <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
             </h2>
             <div class="w3-container">
+              <h3>MCK Clinic API</h3>
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
+                <a href="https://github.com/Melquisedeque-Marins/MCK-Clinic-API" target="_blank">MCK Clinic</a>
               </h6>
-              <p>App Android Nativo utilizando a arquitetura MVVM com Kotlin e diversas features do Android Jetpack.</p>
+              <h3>Tecnologias utilizadas:</h3>
+              <p>AppAPI REST desenvolvida em Java e SpringBoot para uma plataforma de agendamento de consultas e gerenciamento de pacientes destinada à clínicas médicas.</p>
+              <h3>Tecnologias utilizadas:</h3>
+              <ul>
+                <li>Java</li>
+                <li>SpringBoot</li>
+                <li>JPA</li>
+                <li>PostgreSQL</li>
+                <li>Heroku</li>
+
+              </ul>
               <hr>
             </div>
             <div class="w3-container">
