--- a/index.html
+++ b/index.html
@@ -187,14 +187,6 @@
               </ul>
               <hr>
             </div>
-            <div class="w3-container">
-              <h6 class="w3-text-indigo">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio" target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
-              </h6>
-              <p>Repositório no GitLab com um pipeline configurado em Kubernetes.</p>
-            </div>
-          </div>
   
           <!-- End Right Column -->
         </div>
@@ -207,8 +199,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/Melquisedeque-Marins" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/melquisedeque-marins-junior-324291230/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
