--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
             <p> Sou um profissional muito dedicado, com larga experiência na área de engenharia elétrica.
               Estou numa fase de transição de carreira para a área de TI, na qual tenho me dedicado a estudar e aprofundar
               conhecimentos relativos a desenvolvimento de softwares e aplicações web utilizando linguagens de
@@ -170,12 +170,8 @@
             </h2>
             <div class="w3-container">
               <h3>MCK Clinic API</h3>
-              <h6 class="w3-text-indigo">
-                <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/Melquisedeque-Marins/MCK-Clinic-API" target="_blank">MCK Clinic</a>
-              </h6>
-              <h3>Tecnologias utilizadas:</h3>
-              <p>AppAPI REST desenvolvida em Java e SpringBoot para uma plataforma de agendamento de consultas e gerenciamento de pacientes destinada à clínicas médicas.</p>
+              <h3>Sobre o projeto:</h3>
+              <p>API REST desenvolvida em Java e SpringBoot para uma plataforma de agendamento de consultas e gerenciamento de pacientes destinada à clínicas médicas.</p>
               <h3>Tecnologias utilizadas:</h3>
               <ul>
                 <li>Java</li>
@@ -183,11 +179,36 @@
                 <li>JPA</li>
                 <li>PostgreSQL</li>
                 <li>Heroku</li>
-
+                <li>Postman</li>
               </ul>
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Melquisedeque-Marins/MCK-Clinic-API" target="_blank">Repositório do projeto - MCK Clinic</a>
+              </h6>
               <hr>
             </div>
-  
+            <div class="w3-container">
+              <h3>MCK Clinic API</h3>
+              <h3>Sobre o projeto:</h3>
+              <p>Aplicação Web desenvolvida em Java com Spring Boot utilizando o template engine Thymeleaf para renderização do frontend.</p>
+              <h3>Tecnologias utilizadas:</h3>
+              <ul>
+                <li>Java</li>
+                <li>SpringBoot</li>
+                <li>JPA</li>
+                <li>PostgreSQL</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Javascript</li>
+                <li>Thymeleaf</li>
+                <li>Javascript</li>
+              </ul>
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Melquisedeque-Marins/MCK-Clinic-fullstack-Java-spring-thymeleaf" target="_blank">Repositório do projeto - MCK Clinic Fullstack</a>
+              </h6>
+              <hr>
+            </div>
           <!-- End Right Column -->
         </div>
   
